dobavil ustanovku i udalenie

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,7 +62,9 @@
   <ItemGroup>
     <Compile Include="Assets\scripts\camerafollow.cs" />
     <Compile Include="Assets\scripts\heromove.cs" />
-    <Compile Include="Assets\scripts\place_destroy_obj.cs" />
+    <Compile Include="Assets\scripts\mouse_follow.cs" />
+    <Compile Include="Assets\scripts\place_obj.cs" />
+    <Compile Include="Assets\scripts\selfDestroy.cs" />
     <None Include="Assets\Knight Files\Read Me.txt" />
     <None Include="Assets\read me.txt" />
     <Reference Include="Unity.TextMeshPro.Editor">
